Blender Crash when removing pinned Scene #39758

Closed
opened 2014-04-16 20:25:47 +02:00 by Maverick · 7 comments

System Information
win7 64 i7 gtx titan

Blender Version
blender-2.70-b179647-win64 crashes
blender-2.70-b179647-win64-vc12 crashes
2.7 official works

The file has 3 Scenes all pinned on the main view.

Exact steps for others to reproduce the error
Open attached file and delete the current Scene (should be S3). Blender should crash.

Thank you.

pinned_bug.blend

**System Information** win7 64 i7 gtx titan **Blender Version** blender-2.70-b179647-win64 crashes blender-2.70-b179647-win64-vc12 crashes 2.7 official works The file has 3 Scenes all pinned on the main view. **Exact steps for others to reproduce the error** Open attached file and delete the current Scene (should be S3). Blender should crash. Thank you. [pinned_bug.blend](https://archive.blender.org/developer/F85003/pinned_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-04-16 23:07:29 +02:00

This issue was referenced by blender/blender-addons-contrib@88ae0be1c4

This issue was referenced by blender/blender-addons-contrib@88ae0be1c41bde777577cd9b08c6b963fbca7e0c

This issue was referenced by 88ae0be1c4

This issue was referenced by 88ae0be1c41bde777577cd9b08c6b963fbca7e0c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 88ae0be1c4.

Closed by commit 88ae0be1c4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39758
No description provided.