Fix T39758: Blender Crash when removing pinned Scene.